[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/models3d/bubbles/player_bubble.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/player/player_bullet.gd" type="Script" id=2]
[ext_resource path="res://src/audio/bubble_float.wav" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.4
bounce = 1.0

[sub_resource type="SphereShape" id=1]
radius = 0.555495

[sub_resource type="SphereShape" id=2]
radius = 0.553151

[node name="PlayerBullet" type="RigidBody"]
collision_mask = 14
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 0.0
continuous_cd = true
contacts_reported = 2
contact_monitor = true
axis_lock_linear_z = true
axis_lock_angular_z = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="player_bubble" parent="." instance=ExtResource( 1 )]

[node name="Detector" type="Area" parent="."]
collision_layer = 16
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Detector"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="GarbageCollectionTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[connection signal="body_entered" from="Detector" to="." method="_on_Bubble_body_entered"]
[connection signal="timeout" from="GarbageCollectionTimer" to="." method="_on_GarbageCollectionTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
